src/components/FacebookMockup/FacebookCtaSection/FacebookCtaSection.module.css
.ctaContainer {
  width: 100%;
  background-color: #f0f2f5;
  padding: 10px 16px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid var(--border);
}

.titleContainer {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  font-size: 15px;
  color: var(--main-gray);
}

.url {
  text-transform: uppercase;
  font-size: 13px;
}

.title {
  color: var(--main-black);
  font-weight: 600;
  font-size: 17px;
}

.ctaButton {
  text-transform: capitalize;
  position: relative;
  background-color: #e4e6eb;
  padding: 8px 10px;
  font-size: 15px;
  font-weight: 600;
  display: flex;
  align-items: center;
  border-radius: 8px;
  height: fit-content;
}

.copySelectionWrapper {
  position: absolute;
  top: -612px;
  right: -200px;
  background-color: transparent;
  display: flex;
  justify-content: flex-end;
  width: 320px;
  padding: 40px;
  z-index: 1;

  & > ul {
    list-style: none;
    width: 130px;
    border-radius: 12px;
    box-shadow: 0 0 100px 0 rgba(0, 0, 0, 0.1);
    overflow: hidden;
    background-color: white;

    & > li {
      padding: 8px 10px;
      font-weight: normal;
      font-size: 12px;
      cursor: pointer;
      text-transform: capitalize;
    }
  }
}

.copySelectionWrapper > ul > li:hover {
  background-color: rgb(225, 225, 225);
}

.active {
  background-color: var(--main-gray) !important;
  color: white;
}

